# remote-dependency-solving

./: .gitignore  CMakeLists.txt  ChangeLog  README.md  TODO  connection.cfg  protocol.txt  required_repos_list.txt  requirements.txt  work_breakdown_structure.txt
RDS/: CMakeLists.txt
cmake/Config/: version_conf.h.in
cmake/Modules/: FindCheck.cmake
distro/: rds.spec
docs/: RTFM.txt  devel-requirements  garbage_collector_usage_documentation.txt  ssds.xmind
etc/: rds-client.conf  rds-server.conf  ssds-client.conf  ssds-server.conf
libhif-test/: makefile  old_test.cpp  test  test.cpp
man/: rds.1  ssds.1
src/bugzilla/: Makefile  Makefile_hawkey  bug.patch  lr_handle_free_issue.c
src/client/: CMakeLists.txt  README  client.c  client.cpp  client.h  client.hpp  client_main.c  client_main.cpp  test.xml
src/common/: README  cfg_parsing.c  cfg_parsing.h  create_xml.cpp  detect_missing_repos.c  detect_missing_repos.h  errors.h  globvar.h  includes.h  json_create.c  json_create.cpp  json_handler.h  json_handler.hpp  json_handler_2.h  json_read.c  json_read.cpp  log_handler.c  log_handler.h  logger.cpp  logger.hpp  mem_management.c  mem_management.h  network_security.c  network_security.h  network_util.c  network_util.h  packages.c  packages.h  params.c  params.cpp  params.h  params.hpp  read_xml.cpp  repo_handler.c  repo_handler.cpp  repo_handler.h  repo_handler.hpp  repo_handler_2.h  repo_metadata.c  repo_metadata.cpp  (+11 more)
src/examples/: Makefile  Makefile_log  Makefile_params  client.c  hawkey_ex  hawkey_ex.c  hawkey_ex.cpp  hawkey_ex.h  json_improved.c  json_improved.h  log_example.c  log_handler.c  log_handler.h  param_ex.c  server.c
src/server/: Makefile  README  Server.cpp  Server.hpp  server.c  server.cpp  server.h  server.hpp  server_main.c  server_main.cpp  solving.cpp  solving.hpp
tests/: CMakeLists.txt  Makefile  OldMakefile  test_cfg_parsing.c  test_cfg_parsing.h  test_dummy.c  test_dummy.h  test_gc.c  test_gc.h  test_main.c  test_missing_repos.c  test_missing_repos.h  test_params.c  test_params.h  test_template.c  test_template.h
